nohup.out
  File "/data/get_xq_data/main.py", line 127
    if uid == '8282709675' or uid = '7013173046':
                                  ^
SyntaxError: invalid syntax
  File "/data/get_xq_data/main.py", line 127
    if uid == '8282709675' or uid = '7013173046':
                                  ^
SyntaxError: invalid syntax
